kubernetes/spring-petclinic.deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: spring-petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-petclinic
  template:
    metadata:
      labels:
        app: spring-petclinic
    spec:
      containers:
      - name: spring-petclinic
        image: aksdemos.azurecr.io/spring-petclinic:v1
        ports:
        - containerPort: 8080
